// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should match the correct snapshot 1`] = `
<div>
  <Connect(ProjectContainer) />
</div>
`;

exports[`Home should match the correct snapshot 2`] = `
<div>
  <Connect(Palette) />
  <Connect(ControlForm) />
  <Connect(ProjectContainer) />
</div>
`;
